# opentelemetry-tracing

./: .gitignore  README.adoc  build-images.sh  docker-compose-build.yml  docker-compose.yml  renovate.json  setup.sh
analytics/: Dockerfile  index.js  package.json  tsconfig.json
analytics/src/: index.ts
apisix/: apisix.yml  config.yml
catalog/: Dockerfile  pom.xml
catalog/src/main/kotlin/: Analytics.kt  AppProperties.kt  CatalogApp.kt  Model.kt  PriceService.kt
catalog/src/main/resources/: application.yml  data.sql  schema.sql
config/apisix/: apisix.yml  config.yml
config/apisix/front/: apisix.yml  config.yml
config/apisix/inv/: apisix.yml  config.yml
config/krakend/: krakend.yml
config/postgres/: init.sql
helm/: infra.yaml  vcluster.yaml
helm/apps/: Chart.yaml  values.yaml
helm/apps/files/sql/: catalog.sql  pricing.sql  recommandations.sql  recommendations.sql  warehouse_eu.sql  warehouse_jp.sql  warehouse_nord.sql  warehouse_uk.sql  warehouse_us.sql
helm/apps/templates/: _helpers.tpl  analytics.yaml  catalog.yaml  collector.yaml  init_db.yaml  instrumentor.yaml  inventory.yaml  pricing.yaml  recommendations.yaml  secrets.yaml  warehouse-eu.yaml  warehouse-jp.yaml  warehouse-nord.yaml  warehouse-uk.yaml  warehouse-us.yaml
helm/infra/: Chart.yaml  values.yaml
helm/infra/templates/: _helpers.tpl  collector.yaml  jaeger-routes.yaml  jaeger.yaml  mosquitto.yaml  postgres.yaml  redis.yaml  secrets.yaml  traefik.yaml
inventory/: Cargo.toml  Dockerfile
inventory/src/: config.rs  main.rs  model.rs  otel.rs  transfer.rs
pricing/: Dockerfile  app.py  pyproject.toml  requirements.in  requirements.txt
recommendations/: Dockerfile  app.py  pyproject.toml
stock/: Cargo.toml  Dockerfile
stock/src/: data.rs  main.rs  otel.rs
warehouse-eu/: Dockerfile  Dockerfile.native  pom.xml
warehouse-eu/src/main/kotlin/: Model.kt  WarehouseApplication.kt
warehouse-eu/src/main/resources/: application.properties
warehouse-jp/: Dockerfile  Gemfile  config.ru  warehouse.rb
warehouse-nord/: Dockerfile  gleam.toml  manifest.toml
warehouse-nord/src/: warehouse_nord.gleam
warehouse-nord/src/warehouse_nord/: config.gleam  database.gleam  models.gleam  routes.gleam
warehouse-uk/: Dockerfile  pom.xml
warehouse-uk/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
warehouse-uk/src/main/java/ch/frankel/blog/: Location.java  StockLevel.java  StockLevelId.java  StockLevelRepository.java  StockLevelResource.java  StockLevelSerializer.java
warehouse-uk/src/main/resources/: application.properties  import.sql
warehouse-us/: Dockerfile  controller.go  database.go  go.mod  go.sum  main.go  model.go  otel.go
