[package]
name = "inventory"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7"
axum-macros = "0.4"
tower = "0.4"
tower-http = "0.5"
serde = { version = "1.0", features = ["derive"] }
axum-tracing-opentelemetry = "0.18"
init-tracing-opentelemetry = { version = "0.18.1", features = ["otlp", "tracing_subscriber_ext"] }
opentelemetry = "0.22"
opentelemetry-otlp = { version = "0.15", features = ["reqwest-client"] }
tracing = "0.1"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt", "json"] }
deadpool-postgres = { version = "0.13", features = ["serde"] }
config = "0.14"
