[package]
name = "inventory"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = "0.8"
axum-macros = "0.5"
serde = { version = "1.0", features = ["derive"] }
axum-tracing-opentelemetry = "0.26"
init-tracing-opentelemetry = { version = "0.25", features = ["otlp", "tracing_subscriber_ext"] }
opentelemetry = "0.27"
tracing = "0.1"
reqwest = { version = "0.12", features = ["http2", "json"], default-features = false }
reqwest-middleware = "0.4"
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_27"] }
regex = "1.10"
futures = "0.3"
