[tool.poetry]
name = "pricing"
version = "1.1"
description = ""
authors = ["Nicolas Fränkel <nicolas@frankel.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
Flask= "^2.3.3"
SQLAlchemy = "^2.0.25"
Flask-SQLAlchemy = "*"
psycopg2-binary = "^2.9.9"
opentelemetry-distro = {extras = ["otlp"], version = "^0.62b0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
