[package]
name = "stock"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_distr = "0.4"
axum-tracing-opentelemetry = "0.13"
init-tracing-opentelemetry = { version = "0.14", features = ["otlp", "tracing_subscriber_ext"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["reqwest-client"] }
tower = "0.4"
tower-http = "0.4"
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json"
] }
